feat: test improvement - branch misses dropped smell method structure improved