@@ -2,26 +2,32 @@ package gpt54.task0;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
-import java.lang.*;
+import java.util.List;
 
-public class SolutionTest {
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+class SolutionTest {
+
+    private final Solution solution = new Solution();
+
     @Test
-    void sampleCases()  {
-        Solution s = new Solution();
-        List<Boolean> correct = Arrays.asList(
-                s.hasCloseElements(new ArrayList<>(Arrays.asList(11.0, 2.0, 3.9, 4.0, 5.0, 2.2)), 0.3),
-                !s.hasCloseElements(new ArrayList<>(Arrays.asList(1.0, 2.0, 3.9, 4.0, 5.0, 2.2)), 0.05),
-                s.hasCloseElements(new ArrayList<>(Arrays.asList(1.0, 2.0, 5.9, 4.0, 5.0)), 0.95),
-                !s.hasCloseElements(new ArrayList<>(Arrays.asList(1.0, 2.0, 5.9, 4.0, 5.0)), 0.8),
-                s.hasCloseElements(new ArrayList<>(Arrays.asList(1.0, 2.0, 3.0, 4.0, 5.0, 2.0)), 0.1),
-                s.hasCloseElements(new ArrayList<>(Arrays.asList(1.1, 2.2, 3.1, 4.1, 5.1)), 1.0),
-                !s.hasCloseElements(new ArrayList<>(Arrays.asList(1.1, 2.2, 3.1, 4.1, 5.1)), 0.5)
-        );
-        if (correct.contains(false)) {
-            throw new AssertionError();
-        }
+    void returnsFalseWhenListHasFewerThanTwoElements() {
+        assertFalse(solution.hasCloseElements(List.of(1.0), 0.5));
+    }
+
+    @Test
+    void findsCloseValuesAfterSorting() {
+        assertTrue(solution.hasCloseElements(List.of(11.0, 2.0, 3.9, 4.0, 5.0, 2.2), 0.3));
+    }
+
+    @Test
+    void returnsFalseWhenClosestDistanceEqualsThreshold() {
+        assertFalse(solution.hasCloseElements(List.of(1.0, 2.0, 3.0), 1.0));
+    }
+
+    @Test
+    void treatsDuplicateValuesAsCloseElements() {
+        assertTrue(solution.hasCloseElements(List.of(1.0, 2.0, 2.0, 4.0), 0.1));
     }
 }
-
-
